@@ -1,6 +1,7 @@
 package br.softsistem.Gerenciamento_de_estoque.exception;
 
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
@@ -10,58 +11,104 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
+    // Tratamento para exceções de validação de argumentos
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<List<String>> handleValidationExceptions(MethodArgumentNotValidException ex) {
+    public ResponseEntity<Map<String, Object>> handleValidationExceptions(MethodArgumentNotValidException ex) {
+        // Coleta os erros de validação de campo
         List<String> erros = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .toList();
-        return ResponseEntity.badRequest().body(erros);
+                .collect(Collectors.toList());
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("error", "Dados inválidos");
+        response.put("details", erros);
+
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(response);
     }
 
+    // Tratamento para exceções genéricas
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<String> handleGenericException(Exception e) {
+    public ResponseEntity<Map<String, String>> handleGenericException(Exception e) {
+        Map<String, String> response = new HashMap<>();
+        response.put("error", "Erro interno: " + e.getMessage());
+
         return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body("Erro interno: " + e.getMessage());
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(response);
     }
 
+    // Tratamento para a exceção "Usuário desativado"
     @ExceptionHandler(UsuarioDesativadoException.class)
-    public ResponseEntity<String> handleUsuarioDesativadoException(UsuarioDesativadoException ex) {
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(ex.getMessage());
+    public ResponseEntity<Map<String, String>> handleUsuarioDesativadoException(UsuarioDesativadoException ex) {
+        Map<String, String> response = new HashMap<>();
+        response.put("error", ex.getMessage());
+
+        return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(response);
     }
 
+    // Tratamento para exceções RuntimeException
     @ExceptionHandler(RuntimeException.class)
-    public ResponseEntity<String> handleRuntimeException(RuntimeException ex) {
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(ex.getMessage());
+    public ResponseEntity<Map<String, String>> handleRuntimeException(RuntimeException ex) {
+        Map<String, String> response = new HashMap<>();
+        response.put("error", ex.getMessage());
+
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(response);
     }
 
+    // Tratamento para exceções de Acesso Negado
     @ExceptionHandler(AccessDeniedException.class)
-    public Map<String, String> handleAccessDeniedException(AccessDeniedException ex) {
+    public ResponseEntity<Map<String, String>> handleAccessDeniedException(AccessDeniedException ex) {
         Map<String, String> response = new HashMap<>();
         response.put("error", "Você não tem autorização suficiente para essa ação!!!");
-        return response;
+
+        return ResponseEntity.status(HttpStatus.FORBIDDEN)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(response);
     }
 
-    // Tratamento para a exceção personalizada "Consumidor não encontrado"
+    // Tratamento para a exceção "Consumidor não encontrado"
     @ExceptionHandler(ConsumidorNaoEncontradoException.class)
-    public ResponseEntity<String> handleConsumidorNaoEncontradoException(ConsumidorNaoEncontradoException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ex.getMessage());
+    public ResponseEntity<Map<String, String>> handleConsumidorNaoEncontradoException(ConsumidorNaoEncontradoException ex) {
+        Map<String, String> response = new HashMap<>();
+        response.put("error", ex.getMessage());
+
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(response);
     }
 
-    // Tratamento para a exceção personalizada "Organização não encontrada"
+    // Tratamento para a exceção "Organização não encontrada"
     @ExceptionHandler(OrganizacaoNaoEncontradaException.class)
-    public ResponseEntity<String> handleOrganizacaoNaoEncontradaException(OrganizacaoNaoEncontradaException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ex.getMessage());
+    public ResponseEntity<Map<String, String>> handleOrganizacaoNaoEncontradaException(OrganizacaoNaoEncontradaException ex) {
+        Map<String, String> response = new HashMap<>();
+        response.put("error", ex.getMessage());
+
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(response);
     }
 
-    // Tratamento para a exceção personalizada "Resource Not Found"
+    // Tratamento para a exceção "Resource Not Found"
     @ExceptionHandler(ResourceNotFoundException.class)
-    public ResponseEntity<String> handleResourceNotFoundException(ResourceNotFoundException ex) {
-        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(ex.getMessage());
+    public ResponseEntity<Map<String, String>> handleResourceNotFoundException(ResourceNotFoundException ex) {
+        Map<String, String> response = new HashMap<>();
+        response.put("error", ex.getMessage());
+
+        return ResponseEntity.status(HttpStatus.NOT_FOUND)
+                .contentType(MediaType.APPLICATION_JSON)
+                .body(response);
     }
 }
